@@ -4,6 +4,8 @@
 
 Version 5.19.1
 
+Fixed: Monit HTTP GUI: Listen on IPv6 interface if no address is specified (linux specific issue).
+
 Fixed: Issue #438: When 'include /path/*' is used, silently ignore
  if there are no files to include. I.e. the directory is empty
 
